# Pokemon-Exam

./: README.md  pyproject.toml
pokedex/: asgi.py  settings.py  urls.py  wsgi.py
pokemons/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
pokemons/management/commands/: check_evolutionchart.py  import_pokemon.py  import_species_pokemon.py  import_type.py
pokemons/migrations/: 0001_initial.py  0002_remove_species_evolves_from_species.py  0003_alter_pokemon_pokemon_type.py  0004_alter_type_type_name.py
pokemons/templates/: base.html  create_pokemon.html  delete_pokemon.html  pokemon_details.html  pokemon_list.html  register.html  update_pokemon.html
pokemons/templates/registration/: login.html
