[tool.poetry]
name = "pokemon-exam"
version = "0.1.0"
description = ""
authors = ["Mdltre <mjpdelatorre@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.1"
requests = "^2.30.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
